# copilot_client_app

./: &1  .gitignore  ACTIONS_REFACTORING_PLAN.md  AGENTIC_TOOLS_REFACTOR_SUMMARY.md  AGENTS.md  AGENT_LLM_CODE_REVIEW.md  AGENT_LLM_REFACTOR_COMPLETE.md  AGENT_LLM_REFACTOR_PLAN_COMPLETE.md  AGENT_LLM_REVIEW_AND_REFACTOR_PLAN.md  AGENT_LOOP_COMPLETE_FIX_SUMMARY.md  AGENT_LOOP_HANDLER_DEEP_REFACTOR.md  AGENT_LOOP_IMPLEMENTATION_NOTE.md  AGENT_LOOP_REFACTORING.md  AGENT_RESUME_FIX_SUMMARY.md  AGENT_ROLE_SYSTEM_DESIGN.md  APPROVAL_FIX_SUMMARY.md  BUG_FIX_SUMMARY.md  CHAT_SERVICE_ARCHITECTURE_ANALYSIS.md  CHAT_SERVICE_HANDLER_IN_PROGRESS.md  CHAT_SERVICE_PHASE1_2_COMPLETE.md  CHAT_SERVICE_REFACTORING_COMPLETE.md  CHAT_SERVICE_REFACTORING_PLAN.md  CLAUDE.md  CODEX_REVIEW_RESPONSE.md  COMPONENT_REFACTORING_REPORT.md  CONTEXT_BASED_INTERNAL_GUIDE.md  CONTEXT_LIFECYCLE_REFACTORING.md  CONTEXT_LIFECYCLE_REFACTORING_PLAN.md  COPILOT_AGENT_INTEGRATION_REPORT.md  COPILOT_AUTHENTICATION_IMPLEMENTATION.md  COPILOT_AUTH_ERROR_HANDLING.md  COPILOT_AUTH_UI_IMPROVEMENT.md  CURRENT_STATUS.md  Cargo.toml  DEFAULT_OPENAI_MODE.md  DEPRECATIONS.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOMAIN_REFACTORING_GUIDE.md  ERROR_EVENT_FIX.md  FILE_REFERENCE_BACKEND_TESTS_SUMMARY.md  (+72 more)
bamboo/crates/bamboo-cli/: Cargo.toml  README.md
bamboo/crates/bamboo-core/: Cargo.toml
bamboo/crates/bamboo-llm/: Cargo.toml
bamboo/crates/bamboo-server/: Cargo.toml
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs  lib_tests.rs  todo.rs
crates/agent-llm/: Cargo.toml  GEMINI_COMPLETE.md  GEMINI_GUIDE.md  GEMINI_IMPLEMENTATION.md  GEMINI_TASKS.md  PROTOCOL_ARCHITECTURE.md  PROTOCOL_GUIDE.md  PROVIDER_TESTS_PLAN.md
crates/agent-llm/src/: client_trait.rs  error.rs  lib.rs  masking.rs  models.rs  openai.rs  provider.rs  provider_factory.rs  types.rs
crates/agent-loop/: Cargo.toml
crates/agent-loop/src/: config.rs  lib.rs  runner.rs  todo_context.rs  todo_evaluation.rs
crates/agent-mcp/: Cargo.toml
crates/agent-mcp/src/: config.rs  error.rs  executor.rs  lib.rs  manager.rs  tool_index.rs  types.rs
crates/agent-metrics/: Cargo.toml
crates/agent-metrics/src/: aggregator.rs  bus.rs  collector.rs  events.rs  lib.rs  storage.rs  types.rs  worker.rs
crates/agent-server/: Cargo.toml
crates/agent-server/src/: lib.rs  logging.rs  main.rs  metrics_service.rs  server.rs  state.rs
crates/agent-skill/: Cargo.toml
crates/agent-skill/src/: context.rs  lib.rs  types.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: executor.rs  lib.rs  output_manager.rs  registry_tests.rs
crates/agent_orchestrator/: Cargo.toml
crates/agent_orchestrator/src/: lib.rs
crates/anthropic_adapter/: Cargo.toml  README.md
crates/anthropic_adapter/src/: conversion.rs  lib.rs  model_mapping.rs  models.rs
crates/chat_core/: Cargo.toml
crates/chat_core/src/: config.rs  encryption.rs  keyword_masking.rs  lib.rs  paths.rs
crates/chat_state/: Cargo.toml
crates/chat_state/src/: lib.rs
crates/context_manager/: Cargo.toml
crates/context_manager/src/: error.rs  fsm.rs  lib.rs  message_pipeline.rs
crates/context_manager/tests/: branch_tests.rs  context_tests.rs  e2e_complete_flows.rs  fsm_tests.rs  integration_tests.rs  lifecycle_tests.rs  mermaid_enhancement_tests.rs  message_tests.rs  migration_tests.rs  performance_tests.rs  pipeline_tests.rs  serialization_tests.rs  streaming_tests.rs
crates/copilot_client/: Cargo.toml
crates/copilot_client/src/: client_trait.rs  config.rs  error.rs  lib.rs  masking.rs  mod.rs
crates/copilot_client/tests/: client_retry_test.rs  retry_middleware_test.rs  stream_tool_calls_test.rs  test_utils.rs
crates/mcp_client/: Cargo.toml
crates/mcp_client/src/: client.rs  model.rs
crates/reqwest-sse/: Cargo.toml
crates/reqwest-sse/src/: error.rs  lib.rs
crates/reqwest-sse/tests/: e2e.rs
crates/skill_manager/: Cargo.toml
crates/skill_manager/src/: lib.rs  store.rs  types.rs
crates/tool_system/: Cargo.toml
crates/tool_system/src/: compat.rs  executor.rs  lib.rs  manager.rs  mod.rs  prompt_formatter.rs
crates/tool_system/tests/: executor_tests.rs  factory_tests.rs  registry_tests.rs  tool_tests.rs
crates/web_service/: Cargo.toml
crates/web_service/src/: config.rs  dto.rs  error.rs  handlers.rs  lib.rs  models.rs  server.rs  workspace_service.rs
crates/web_service/tests/: agent_controller_tests.rs  agent_service_tests.rs  anthropic_api_tests.rs  bamboo_config_tests.rs  bodhi_config_tests.rs  context_api_tests.rs  fsm_integration_tests.rs  http_api_integration_tests.rs  llm_request_builder_tests.rs  openai_api_tests.rs  settings_config_tests.rs  signal_pull_integration_tests.rs  storage_architecture_tests.rs  system_prompt_enhancer_tests.rs  workspace_api_tests.rs  workspace_api_tests_simple.rs
crates/web_service_standalone/: Cargo.toml
crates/web_service_standalone/src/: main.rs  migrate.rs
crates/workflow_system/: Cargo.toml
crates/workflow_system/src/: executor.rs  lib.rs
crates/workflow_system/tests/: workflow_tests.rs
src-tauri/: .gitignore  Cargo.toml  mcp_servers.json  tauri.conf.json  test.txt
src-tauri/capabilities/: default.json
src-tauri/src/: app_settings.rs  bodhi_settings.rs  claude_binary.rs  lib.rs  main.rs  proxy_auth_dialog.rs  spotlight.rs
src-tauri/src/checkpoint/: manager.rs  mod.rs  state.rs  storage.rs
src-tauri/src/claude/: command.rs  discovery.rs  mod.rs  version.rs
src-tauri/src/command/: chat.rs  claude_code.rs  copy.rs  file_picker.rs  image.rs  keyword_masking.rs  mcp.rs  mod.rs  scheduled_task.rs  slash_commands.rs  tools.rs  web_service.rs  workflows.rs
src-tauri/src/copilot/: auth_handler.rs  client.rs  config.rs  mod.rs  model.rs  models_handler.rs  o_client.rs  pipeline.rs  sse.rs
src-tauri/src/extension_system/: compat.rs  manager.rs  mod.rs
src-tauri/src/internal/: README.md  company_init.rs.example  mod.rs
src-tauri/src/mcp/: client.rs  model.rs
src-tauri/src/process/: registry.rs
src-tauri/src/processor/: mcp_proceeor.rs  mod.rs  (+1 more)
(+1847 files in other folders)
