[workspace]
members = [
    "crates/claude_installer",
    "crates/chat_core",
    "crates/copilot_client",
    "crates/workflow_system",
    "crates/mcp_client",
    "crates/web_service",
    "crates/skill_manager",
    "src-tauri",
    "crates/web_service_standalone",
    "crates/copilot-agent/crates/copilot-agent-core",
    "crates/copilot-agent/crates/copilot-agent-llm",
    "crates/copilot-agent/crates/copilot-agent-mcp",
    "crates/copilot-agent/crates/copilot-agent-server",
    "crates/copilot-agent/crates/copilot-agent-cli",
]
resolver = "2"
default-members = ["src-tauri"]
