[workspace]
members = [
    "crates/claude_installer",
    "crates/chat_core",
    "crates/workflow_system",
    "crates/agent-core",
    "crates/agent-loop",
    "crates/agent-server",
    "crates/agent-tools",
    "crates/agent-skill",
    "crates/agent-llm",
    "crates/agent-cli",
    "crates/web_service",
    "crates/anthropic_adapter",
    "src-tauri",
    "crates/web_service_standalone",
]
resolver = "2"
default-members = ["src-tauri"]
