[package]
name = "copilot_chat"
version = "0.1.1"
description = "A Tauri App"
authors = ["bigduu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "copilot_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
copilot_client = { path = "../crates/copilot_client" }
tool_system = { path = "../crates/tool_system" }
mcp_client = { path = "../crates/mcp_client" }
web_service = { path = "../crates/web_service" }
# Tauri core and plugins
tauri = { version = "2.5.1", features = [] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

async-stream = "0.3.6"

# Error Handling & Utilities
thiserror = "2.0.17"
arboard = "3.6.1"    # Clipboard handling
anyhow = "1.0.100"

# Logging and Debug
log = { version = "0.4.28", features = ["std"] }
env_logger = "0.11.8"
tauri-plugin-log = "2.7.0"

crossbeam = "0.8.4"

# Utilities
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.0"

rmcp = { version = "0.8.1", features = ["transport-child-process", "client"] }

once_cell = "1.21.3"

rfd = "0.15.4"

[features]
default = []
# Internal company features - only enable in company environment
internal = []
