[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { workspace = true, features = ["json", "stream"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
eventsource-client = "0.12"
futures = "0.3"
colored = "2"
anyhow = { workspace = true }

[dependencies.uuid]
version = "1"
features = ["v4"]
