[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
dashmap = "6"
futures = "0.3"
tokio-util = { version = "0.7" }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
