[package]
name = "agent-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
agent-metrics = { path = "../agent-metrics" }
chat_core = { path = "../chat_core" }
reqwest = { workspace = true, default-features = false, features = ["json", "stream", "gzip", "rustls-tls"] }
reqwest-retry = "0.7"
reqwest-middleware = { version = "0.4", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
eventsource-stream = "0.2"
futures = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
lazy_static = "1.4"
webbrowser = { workspace = true }
chrono = { workspace = true }
arboard = { workspace = true }
rfd = { workspace = true }
tauri = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }

[features]
default = []
tauri-dialog = ["dep:tauri"]

[dev-dependencies]
wiremock = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
http = "1"
