[package]
name = "agent-loop"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_loop"
path = "src/lib.rs"

[dependencies]
agent-core = { path = "../agent-core" }
agent-llm = { path = "../agent-llm" }
agent-tools = { path = "../agent-tools" }
agent-metrics = { path = "../agent-metrics" }
agent-skill = { path = "../agent-skill" }

chrono = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
agent-tools = { path = "../agent-tools" }
agent-metrics = { path = "../agent-metrics" }
