[package]
name = "agent-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
dashmap = "6"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
