[package]
name = "agent-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = "0.2"
futures = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
parking_lot = "0.12"

[dev-dependencies]
tokio-test = { workspace = true }
