[package]
name = "agent-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }

async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"

[dev-dependencies]
tempfile = "3"
