[package]
name = "agent-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }

async-trait = "0.1"
chrono = { workspace = true, features = ["serde"] }
rusqlite = { workspace = true, features = ["bundled", "chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
