[package]
name = "agent-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_server"
path = "src/lib.rs"

[[bin]]
name = "agent-server"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
agent-loop = { path = "../agent-loop" }
agent-llm = { path = "../agent-llm" }
agent-tools = { path = "../agent-tools" }
agent-skill = { path = "../agent-skill" }

actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
env_logger = "0.11"
log = "0.4"
dirs = "5.0"
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
