[package]
name = "agent-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_server"
path = "src/lib.rs"

[[bin]]
name = "agent-server"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
agent-loop = { path = "../agent-loop" }
agent-llm = { path = "../agent-llm" }
agent-tools = { path = "../agent-tools" }
agent-skill = { path = "../agent-skill" }
agent-mcp = { path = "../agent-mcp" }
agent-metrics = { path = "../agent-metrics" }
chat_core = { path = "../chat_core" }

actix-web = { workspace = true }
actix-cors = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
async-stream = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
