[package]
name = "agent-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
dirs = "5.0"
glob = "0.3"
globset = "0.4"
log = "0.4"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
url = "2.5"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
libc = "0.2"
agent-core = { path = "../agent-core" }

# HTTP request support
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
futures-util = { version = "0.3", optional = true }

# Git operations support
git2 = { version = "0.18", optional = true }

# LSP client support
lsp-types = { version = "0.94", optional = true }

[features]
default = ["http"]
http = ["reqwest", "futures-util"]
git = ["git2"]
full = ["http", "git"]
