[package]
name = "agent-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
libc = { workspace = true }
agent-core = { path = "../agent-core" }

# HTTP request support
reqwest = { workspace = true, features = ["json", "stream"] }
futures-util = { workspace = true }

# Git operations support
git2 = { version = "0.18", optional = true }

# LSP client support
lsp-types = { version = "0.94", optional = true }

[features]
default = []
# HTTP request support (reqwest is now a required dependency)
http = []
git = ["git2"]
full = ["http", "git"]
