[package]
name = "anthropic_adapter"
version = "0.1.0"
edition = "2021"
description = "Anthropic API to OpenAI API adapter for Bodhi"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chat_core = { path = "../chat_core" }
agent-llm = { path = "../agent-llm" }
tokio = { version = "1", features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
