[package]
name = "anthropic_adapter"
version = "0.1.0"
edition = "2021"
description = "Anthropic API to OpenAI API adapter for Bamboo"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chat_core = { path = "../chat_core" }
agent-llm = { path = "../agent-llm" }
tokio = { workspace = true, features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
