[package]
name = "chat_core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for the chat system"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.22"
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
