[package]
name = "chat_core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for the chat system"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.22"
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
