[package]
name = "chat_core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for the chat system"

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
