[package]
name = "chat_state"
version = "0.1.0"
edition = "2021"
description = "State machine and FSM logic for chat contexts"

[dependencies]
chat_core = { path = "../chat_core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
