[package]
name = "context_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tool_system = { path = "../tool_system" }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
tracing = "0.1"
futures = "0.3"
async-trait = "0.1"
eventsource-stream = "0.2"
thiserror = "1.0"
regex = "1.10"
log = "0.4"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.10"
tokio-test = "0.4"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
