[package]
name = "copilot_client"
version = "0.1.0"
edition = "2021"

[dependencies]
context_manager = { path = "../context_manager" }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.22"

# HTTP Client & Async
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "gzip",
    "rustls-tls",
] }
tokio = { version = "1.45.0", features = ["full"] }
async-trait = "0.1"

# Error Handling & Utilities
thiserror = "2.0"
uuid = { version = "1.16", features = ["v4"] }
futures-util = "0.3"
bytes = "1"
anyhow = "1.0"
dirs = "5.0"
lazy_static = "1.4"
eventsource-stream = "0.2"

# Logging
log = { version = "0.4", features = ["std"] }

# Tauri
tauri = { version = "2.5.1", features = [] }

# Other
webbrowser = "1"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3"
rfd = "0.15"
native-dialog = "0.9.2"

[dev-dependencies]
tool_system = { path = "../tool_system" }
wiremock = "0.5"
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3.10"
