[package]
name = "mcp_client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
rmcp = { version = "0.1", features = ["transport-child-process", "client"] }
once_cell = "1.19"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"