[package]
name = "reqwest-sse"
version = "0.1.0"
edition = "2024"
description = "A lightweight Rust library that extends reqwest to support Server-Sent Events (SSE). This library is copy from https://github.com/vvvinceocam/reqwest-sse"

[dependencies]
async-stream = "0.3.6"
reqwest = { version = "0.12", features = [
    "http2",
    "stream",
], default-features = false }
tokio = "1"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
httpmock = "0.7"
reqwest = { version = "0.12", features = [
    "http2",
    "rustls-tls",
    "stream",
    "zstd",
], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
