[package]
name = "tool_system"
version = "0.1.0"
edition = "2021"

[dependencies]
# Auto Registration System
inventory = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling & Utilities
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = { version = "0.4", features = ["std"] }

# Async
tokio = { version = "1.45.0", features = ["full"] }

# Utilities
once_cell = "1.19"
regex = "1.10"
walkdir = "2.3"
similar = "2.4"
glob = "0.3"
ignore = "0.4"
async-trait = "0.1"
lazy_static = "1.4"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.10"
tokio-test = "0.4"
tokio = { version = "1.45.0", features = ["full"] }