[package]
name = "web_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
anyhow = "1.0"
dirs = "5.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
futures-util = "0.3"
bytes = "1"
claude_installer = { path = "../claude_installer" }
chat_core = { path = "../chat_core" }
agent-llm = { path = "../agent-llm" }
agent-server = { path = "../agent-server" }
agent-tools = { path = "../agent-tools" }
agent-core = { path = "../agent-core" }
agent-skill = { path = "../agent-skill" }

[dev-dependencies]
actix-http = "3.0"
tempfile = "3.10"
agent-llm = { path = "../agent-llm" }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
wiremock = "0.5"
async-trait = "0.1.1"
