[package]
name = "web_service_standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
dotenvy = "0.15"

web_service = { path = "../web_service" }
copilot_client = { path = "../copilot_client" }

rfd = "0.15"
