[package]
name = "web_service_standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }

web_service = { path = "../web_service" }
