[package]
name = "web_service_standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"
clap = { workspace = true }

web_service = { path = "../web_service" }
chat_core = { path = "../chat_core" }
