[package]
name = "workflow_system"
version = "0.1.0"
edition = "2021"

[dependencies]
# Auto Registration System
inventory = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling & Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Async
tokio = { workspace = true }

# Utilities
async-trait = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }










