[package]
name = "bamboo-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bamboo-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eventsource-client = "0.12"
futures = "0.3"
colored = "2"
anyhow = "1"

[dependencies.uuid]
version = "1"
features = ["v4"]
