[package]
name = "bamboo-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
bamboo-core = { path = "../bamboo-core" }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
eventsource-stream = "0.2"
futures = "0.3"
thiserror = "1"
log = "0.4"
dirs = "5.0"
